--- a/Theory_of_game.csproj
+++ b/Theory_of_game.csproj
@@ -54,11 +54,20 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Formula.cs" />
+    <Compile Include="Matrix.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Matrix.Designer.cs">
+      <DependentUpon>Matrix.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reader.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Matrix.resx">
+      <DependentUpon>Matrix.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
